--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -1,7 +1,6 @@
 .footer {
   width: 100%;
   height: 60px;
-  padding: 0 var(--mg) 0 var(--mg);
   border-top: 1px solid var(--border);
   background-color: var(--bg-light);
   overflow-x: auto;
@@ -15,6 +14,7 @@
   height: 100%;
   min-width: 1240px;
   max-width: 1250px;
+  margin: 0 var(--mg) 0 var(--mg);
 }
 
 .footer__link-pfp {
