--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -1,6 +1,5 @@
 .header {
   width: 100%;
-  padding: 0 var(--mg) 0 var(--mg);
   border-bottom: 1px solid var(--border);
   background-color: var(--bg-light);
   height: 120px;
@@ -16,6 +15,7 @@
   gap: 5px;
   min-width: 1230px;
   max-width: 1250px;
+  margin: 0 var(--mg) 0 var(--mg);
 }
 
 .header__box-title {
